src/test/07-Imports/09-error-opeartor.txt
09-error-opeartor.ck:8:3: error: cannot resolve operator '=^' on types 'Foo' and 'Foo'
[8] a =^ b;
      ^
